--- a/conclusions/conclusions.tex
+++ b/conclusions/conclusions.tex
@@ -65,7 +65,7 @@ The requirements are laid out the same way as in the introduction, and the succe
 	well as receive output from the robot in real-time. No hard real-time deadlines are set, given that the application is 
 	distributed, these deadlines would be hard to estimate without extensive research and control over the environment of 
 	the application, hence negating the accessibility requirement. However, the response time of the system should be 
-	maximized to the extent of the current state of the art of the technologies used.}\\
+	minimized to the extent of the current state of the art of the technologies used.}\\
 
 	HRUI is a real-time application with inputs being available as fast as the events that generate them are produced, with 
 	a maximum delay of a few milliseconds (the actual value has not been measured, for lack of appropriate tools, but is 
