--- a/planning/planning.tex
+++ b/planning/planning.tex
@@ -81,7 +81,7 @@ The items are divided into 4 main groups:
 	\item Miscellaneous.
 \end{itemize}
 \begin{figure}[H]
-\caption{Gantt Chart (See next page)\label{budget}}
+\caption{Budget (See next page)\label{budget}}
 \end{figure}
 \includepdf[landscape]{./img/budget.pdf}
 \section{Results}
