--- a/tech/techoverview.tex
+++ b/tech/techoverview.tex
@@ -875,8 +875,7 @@ halting the application, using error handling procedures).\\
 
 To complete the breakdown of the definition of the MEAN Stack, open-source software is software that has its source code
 available to the public for study, discussion, distribution, modification and redistribution for any purpose. The Open Source
-Software Movement is discussed as part of the social and professional implications of engineering in chapter \ref{conclusions}
-section \ref{opensourcemovement}.\\
+Software Movement is discussed as part of the social and professional implications of engineering in section \ref{opensourcemovement}.\\
 
 In the following sections, the components of the MEAN Stack will be briefly discussed.\\
 \newpage
@@ -2093,5 +2092,5 @@ view), portable, low-cost, universal user interface and controller for any robot
 \captionsetup{justification=centering}
 \includegraphics[width=0.6\linewidth]{raspberrypiint}
 \caption{Screenshot of Raspberry Pi 2 Integration with Khepera III and USB Web Cam. 
-\href{https://www.youtube.com/watch?v=HtgBNOEmj6w}{Full Video}\label{kheperaiiidemo}}
+\href{https://www.youtube.com/watch?v=HtgBNOEmj6w}{Full Video URL:} \url{https://youtu.be/HtgBNOEmj6w}\label{kheperaiiidemo}}
 \end{figure}
